# First_test

./: .gitignore  README.md  config.example.yaml  pom.xml  pyproject.toml  requirements.txt
cpp_deepseek/: CMakeLists.txt
cpp_deepseek/include/deepseek/api/: ApiRequestConfig.hpp  ApiResponse.hpp  DeepSeekModel.hpp
cpp_deepseek/include/deepseek/model/: ApiKeyConfig.hpp  Conversation.hpp  Message.hpp  RoleCard.hpp  WorldBook.hpp  WorldBookEntry.hpp
cpp_deepseek/src/: main_console.cpp
cpp_deepseek/src/api/: ApiRequestConfig.cpp  ApiResponse.cpp
cpp_deepseek/src/model/: ApiKeyConfig.cpp  Conversation.cpp  Message.cpp  RoleCard.cpp  WorldBook.cpp  WorldBookEntry.cpp
deepseek_chat/: __init__.py  main.py
deepseek_chat/api/: __init__.py  client.py  models.py
deepseek_chat/domain/: __init__.py  entities.py
deepseek_chat/services/: __init__.py  conversation_service.py  storage_service.py
deepseek_chat/utils/: __init__.py  helpers.py
src/main/java/com/deepseek/api/: ApiRequestConfig.java  ApiResponse.java  DeepSeekApiService.java  DeepSeekModel.java
src/main/java/com/deepseek/chat/: DeepSeekChat.java
src/main/java/com/deepseek/logic/: ConversationLogic.java
src/main/java/com/deepseek/model/: ApiKeyConfig.java  Conversation.java  Message.java  RoleCard.java  WorldBook.java  WorldBookEntry.java
src/main/java/com/deepseek/storage/: StorageManager.java
src/main/java/com/deepseek/ui/: ChatApplication.java
tests/: __init__.py  test_api_models.py  test_domain_entities.py  test_utils.py
